cmd/kubetype-gen/testdata/test_input/negative/defaults/emptygroup/doc.go
// Package emptygroup is for test
// test should fail because the group in group/version is missing
// +kubetype-gen:groupVersion=groupversion
package emptygroup
